Fix popup overlapping topbar

--- a/web/app/style/z-indices.less
+++ b/web/app/style/z-indices.less
@@ -1,3 +1,3 @@
 @z-index-base: 0;
 @z-index-topbar: 10;
-@z-index-popup: 10;
+@z-index-popup: 5;
